--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/skins/CreateNewObjectWindowSkin.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/skins/CreateNewObjectWindowSkin.mxml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		xmlns:s="library://ns.adobe.com/flex/spark" 
-		xmlns:mx="library://ns.adobe.com/flex/mx"
-		creationComplete="sparkskin1_creationCompleteHandler(event)">
+		xmlns:mx="library://ns.adobe.com/flex/mx">
 	<!-- host component -->
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.modules.dataBase.view.components.windows.CreateNewObjectWindow")]
@@ -22,19 +21,14 @@
 					baseName.selectedIndex = 0;
 			}
 			
-			protected function sparkskin1_creationCompleteHandler(event:FlexEvent):void
+			protected function chooseBaseGroup_creationCompleteHandler(event:FlexEvent):void
 			{
 				// TODO Auto-generated method stub
-				types.selectedItem = hostComponent.typeVO;
-			}
-			
-			protected function types_changeHandler(event:IndexChangeEvent):void
-			{
-				hostComponent.typeVO = types.selectedItem;
 				if ( hostComponent.typeVO.container == 3 )
+				{
 					chooseBaseGroup.visible = false;
-				else
-					chooseBaseGroup.visible = true;
+					chooseBaseGroup.includeInLayout = false;
+				}
 			}
 			
 		]]>
@@ -50,53 +44,43 @@
 		<s:State name="normal" />
 	</s:states>
 	
-	<s:HGroup width="100%" height="100%">
-		<s:VGroup width="150" height="100%">
-			
-			<s:List id="types" width="100%" height="100%" 
-					dataProvider="{hostComponent.types}" labelField="displayName"
-					change="types_changeHandler(event)"/>
-			
-		</s:VGroup>
-		
-		<s:VGroup width="100%" height="100%" paddingTop="10" paddingLeft="10" paddingRight="10">
+	
+	<s:VGroup width="100%" height="100%" paddingTop="10" paddingLeft="10" paddingRight="10">
 			
 			
-			<s:HGroup width="100%" height="20" verticalAlign="middle">
+		<s:HGroup width="100%" height="20" verticalAlign="middle">
 				
-				<s:Label text="{ resourceManager.getString( 'DataBase_General', 'create_new_object_window_Name' ) }" />
+			<s:Label text="{ resourceManager.getString( 'DataBase_General', 'create_new_object_window_Name' ) }" />
 				
-				<mx:Spacer width="100%" />
+			<mx:Spacer width="100%" />
 				
-				<s:TextInput id="objectName" width="300"/>
+			<s:TextInput id="objectName" width="300"/>
 				
-			</s:HGroup>
+		</s:HGroup>
 			
-			<mx:Spacer height="5" />
+		<mx:Spacer height="5" />
 			
-			<s:HGroup id="chooseBaseGroup" width="100%" height="20" verticalAlign="middle" >
+		<s:HGroup id="chooseBaseGroup" width="100%" height="20" verticalAlign="middle" creationComplete="chooseBaseGroup_creationCompleteHandler(event)">
 				
-				<s:Label text="{ resourceManager.getString( 'DataBase_General', 'create_new_object_window_Base' ) }" />
+			<s:Label text="{ resourceManager.getString( 'DataBase_General', 'create_new_object_window_Base' ) }" />
 				
-				<mx:Spacer width="100%" />
+			<mx:Spacer width="100%" />
 				
-				<s:DropDownList id="baseName" width="300"
-								dataProvider="{hostComponent.dataBases}" skinClass="spark.skins.spark.DropDownListSkin"
-								labelField="name" creationComplete="baseName_creationCompleteHandler(event)" />
-				
-			</s:HGroup>
+			<s:DropDownList id="baseName" width="300"
+							dataProvider="{hostComponent.dataBases}" skinClass="spark.skins.spark.DropDownListSkin"
+							labelField="name" creationComplete="baseName_creationCompleteHandler(event)" />
 			
-			<s:HGroup width="100%" height="20" verticalAlign="middle" horizontalAlign="right">
-				
-				<s:Button id="ok" label="{ resourceManager.getString( 'DataBase_General', 'create_new_object_window_OK' ) }" click="{hostComponent.ok_close_window()}"/>
-				
-				<s:Button id="cancel" label="{ resourceManager.getString( 'DataBase_General', 'create_new_object_window_Cancel' ) }" click="{hostComponent.no_close_window()}"/>
-				
-			</s:HGroup>
+		</s:HGroup>
 			
-		</s:VGroup>
-		
-	</s:HGroup>
+		<s:HGroup width="100%" height="20" verticalAlign="middle" horizontalAlign="right">
+				
+			<s:Button id="ok" label="{ resourceManager.getString( 'DataBase_General', 'create_new_object_window_OK' ) }" click="{hostComponent.ok_close_window()}"/>
+				
+			<s:Button id="cancel" label="{ resourceManager.getString( 'DataBase_General', 'create_new_object_window_Cancel' ) }" click="{hostComponent.no_close_window()}"/>
+				
+		</s:HGroup>
+			
+	</s:VGroup>
 	
 	
 	
