git-svn-id: http://svn.vdombox.ru/flextools/trunk@7550 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
@@ -224,6 +224,18 @@
 			{
 				var copyEvent : ObjectsTreePanelEvent = new ObjectsTreePanelEvent( ObjectsTreePanelEvent.COPY );
 				copyEvent.objectID = _data.@id;
+				var xmlListCollection : XMLListCollection = (owner as Tree).dataProvider as XMLListCollection;
+				var xml : XML;
+				for each ( xml in xmlListCollection )
+				{
+					var xmlList : XMLList = xml..object;
+					var xml2 : XML;
+					for each ( xml2 in xmlList )
+					{
+						if ( xml2.@id == _data.@id )
+							copyEvent.pageID = xml.@id;
+					}
+				}
 				dispatchEvent( copyEvent );
 			}
 			
