Fix show Activ + Embaded
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7565 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/Body.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/Body.mxml
@@ -1,20 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:HGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
+<mx1:HDividedBox xmlns:fx="http://ns.adobe.com/mxml/2009"
 		  xmlns:mx="library://ns.adobe.com/flex/halo"
 		  xmlns:s="library://ns.adobe.com/flex/spark"
 		  xmlns:components="net.vdombox.ide.modules.events.view.components.*"
 		  
-		  height="100%" width="100%" gap="0"
-		  paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5" xmlns:mx1="library://ns.adobe.com/flex/mx">
+		  height="100%" width="100%"
+		  xmlns:mx1="library://ns.adobe.com/flex/mx">
 
 	<components:WorkArea id="workArea"
 						 height="100%" width="100%" minWidth="400" />
 
-	<s:Rect width="8" height="100%">
-		<s:fill>
-			<s:SolidColor color="#424242"/>
-		</s:fill>
-	</s:Rect>
+	
 	
 	<mx1:VDividedBox height="100%" width="228" minWidth="200" dividerSkin="net.vdombox.view.skins.DividerSkin">
 
@@ -25,4 +21,4 @@
 		<components:EventsPanel id="eventsPanel"
 								width="100%" height="60%"/>
 	</mx1:VDividedBox>
-</s:HGroup>
+</mx1:HDividedBox>
