--- a/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/Thumbnail.mxml
+++ b/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/Thumbnail.mxml
@@ -40,7 +40,7 @@
 				if ( resourceVO.icon )
 					image.source = resourceVO.icon;
 				else
-					BindingUtils.bindSetter( dataChanged, resourceVO, "icon", true, true );
+					BindingUtils.bindSetter( dataChanged, resourceVO, "icon", false, true );
 //					imageDataWatcher = BindingUtils.bindProperty( image, "source", _data, "icon", true, true );
 				
 				/*if ( _data && ( data.type == "jpg" || data.type == "jpeg" || data.type == "png" || data.type == "gif" ) )
