--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
@@ -3,7 +3,7 @@
 					  xmlns:s="library://ns.adobe.com/flex/spark" 
 					  xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="300"
 					  implements="net.vdombox.ide.modules.dataBase.interfaces.IEditor" 
-					  xmlns:components="net.vdombox.components.*">	
+					  xmlns:components="net.vdombox.components.*" xmlns:components1="net.vdombox.ide.modules.dataBase.view.components.*">	
 	
 	
 	<fx:Script>
@@ -23,6 +23,7 @@
 			import net.vdombox.ide.common.vo.ObjectVO;
 			import net.vdombox.ide.modules.dataBase.events.QueueEvent;
 			import net.vdombox.ide.modules.dataBase.model.vo.StructureVO;
+			import net.vdombox.ide.modules.dataBase.view.components.ItemRenderers.BoldSearchItemRenderer;
 			import net.vdombox.ide.modules.dataBase.view.components.ItemRenderers.TextInputItemRenderers;
 			import net.vdombox.ide.modules.dataBase.view.components.Queue.QueueManager;
 			
@@ -186,7 +187,7 @@
 						var _header:AdvancedDataGridColumn = new AdvancedDataGridColumn();
 						var columnProps : StructureVO = new StructureVO( xmlHeader );
 					
-						_header.itemRenderer = new ClassFactory( TextInputItemRenderers );
+						_header.itemRenderer = new ClassFactory( BoldSearchItemRenderer );
 						dataGridColumnsProps.push( columnProps );
 						_header.dataField = xmlHeader.@name;
 						
@@ -617,9 +618,9 @@
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	<s:VGroup width="100%" height="100%">
-			<mx:AdvancedDataGrid id="dataTable" dataProvider="{dataGridProvider}"
+			<components1:VDOMAdvancedDataGrid id="dataTable" dataProvider="{dataGridProvider}"
 						 width="100%" height="100%" horizontalScrollPolicy="auto" verticalScrollPolicy="auto"				 
-						 draggableColumns="true" sortableColumns="true" />
+						 draggableColumns="true" sortableColumns="true" doubleClickEnabled="true"/>
 		<s:Group width="100%">
 			<s:Rect width="100%" height="70">
 				<s:fill>
@@ -627,7 +628,9 @@
 				</s:fill>
 			</s:Rect>
 			
-			<s:VGroup width="100%" height="70">
+			<s:VGroup width="100%" height="102">
+				
+				<components1:SearchBox target="{dataTable}" height="22"/>
 				
 				<s:HGroup width="100%" height="20" horizontalAlign="left" verticalAlign="middle" gap="0" paddingRight="0" paddingLeft="0">
 					<s:Label text="Pages:" />
