git-svn-id: http://svn.vdombox.ru/flextools/trunk@7576 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ScriptEditor.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ScriptEditor.mxml
@@ -149,7 +149,7 @@
 				
 				<components2:WorkAreaButton id="saveButton"
 										   enabled.unsaved="true" enabled="false" height="20" icon="@Embed('icons/save.png')"
-										   label="Save" click="scriptEditor_saveHandler( event )"
+										   label="{ resourceManager.getString( 'Scripts_General', 'save' ) }" click="scriptEditor_saveHandler( event )"
 										   highlighted="false" highlighted.unsaved="true"/>
 				
 			</s:HGroup>
