--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableStructure.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableStructure.mxml
@@ -171,7 +171,7 @@
 				if (selectedItem.name == "id")
 					return;
 				
-				Alert.Show( "Remove: You might lose data! Do you really want to remove?", AlertButton.OK_No, this, removeSelectedColRequest );
+				Alert.Show( resourceManager.getString( 'DataBase_General', 'data_table_structure_delete_dialog' ), AlertButton.OK_No, this, removeSelectedColRequest );
 			}
 			
 			private function removeSelectedColRequest( event : CloseEvent ) : void 
@@ -304,13 +304,13 @@
 			
 			<s:HGroup width="100%" height="100%" horizontalAlign="left" verticalAlign="middle" paddingLeft="10">
 			
-				<s:Button id="commit" label="commit" click="applyBtnClickHandler()" />
+				<s:Button id="commit" label="{ resourceManager.getString( 'DataBase_General', 'data_table_structure_commit' ) }" click="applyBtnClickHandler()" />
 			
-				<s:Button id="addNew" label="add" click="addBtnHandler()" />
+				<s:Button id="addNew" label="{ resourceManager.getString( 'DataBase_General', 'data_table_structure_add' ) }" click="addBtnHandler()" />
 			
-				<s:Button id="delete" label="delete" click="removeBtnHandler()" />
+				<s:Button id="delete" label="{ resourceManager.getString( 'DataBase_General', 'data_table_structure_delete' ) }" click="removeBtnHandler()" />
 				
-				<s:Button id="discard" label="discard" click="discardChanges()" />
+				<s:Button id="discard" label="{ resourceManager.getString( 'DataBase_General', 'data_table_structure_discard' ) }" click="discardChanges()" />
 			</s:HGroup>
 		</s:Group>
 	</s:VGroup>
