--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTable.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTable.mxml
@@ -24,6 +24,8 @@
 			// FIXME: not Object mas by IVDOMObjectVO.
 			private var _objectVO : Object;
 			
+			private var structeClick : Boolean = false;
+			
 			public function get editorID() : String
 			{
 				return _objectVO ? _objectVO.id : "";
@@ -58,12 +60,16 @@
 			protected function data_clickHandler(event:MouseEvent):void
 			{
 				currentState = "tableEditor";
-				dispatchEvent( new DataTablesEvents ( DataTablesEvents.UPDATE_STRUCTURE ) );
+				dispatchEvent( new DataTablesEvents ( DataTablesEvents.UPDATE_DATA ) );
 			}
 			
 			protected function structure_clickHandler(event:MouseEvent):void
 			{
 				currentState = "tableStructure";
+				if ( !structeClick )
+					structeClick = true
+				else
+					dispatchEvent( new DataTablesEvents ( DataTablesEvents.UPDATE_STRUCTURE ) );
 			}
 			
 			
