git-svn-id: http://svn.vdombox.ru/flextools/trunk@7586 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeBase.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeBase.mxml
@@ -322,7 +322,9 @@
 			
 			private function errorHandler2(event : AttributeEvent) : void
 			{
-				var errorString : String = event.value + "  " + rtextLabel.text;
+				var errorString : String = event.value + "  ";
+				if ( data && data.hasOwnProperty( "attributeDescriptionVO" ) && data.attributeDescriptionVO )
+					errorString += data.attributeDescriptionVO.displayName;
 				Alert.Show( errorString, AlertButton.OK, this.parentApplication );
 			}
 
